Добавил функцию добавления одежды также чтобы она сохронялась в базу данных mariadb

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=Nptv23clothing
 spring.datasource.password=nptv23clothingjpa
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.show-sql: true
+
+server.port=8081
